[metadata]
name = paramnb
version = attr: param.version.get_setupcfg_version
description = Generate ipywidgets from Parameterized objects in the notebook
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Development Status :: 4 - Beta
author = PyViz
author_email = holoviews@gmail.com
maintainer = PyViz
maintainer_email = holoviews@gmail.com
url = https://paramnb.pyviz.org
project_urls =
    Bug Tracker = https://github.com/ioam/paramnb/issues
    Documentation = https://paramnb.pyviz.org
    Source Code = https://github.com/ioam/paramnb


[options]
include_package_data = True
packages = find:
python_requires = >=2.7
install_requires =
    param >=1.7.0
    ipywidgets >=5.2.2

[options.extras_require]
tests =
    nbsmoke >=0.2.6
    flake8
    pytest >=2.8.5

examples =
    pyct[cmd]
    holoviews >=1.9.0
    pandas
    jupyter
    numpy
    matplotlib
    bokeh


[options.entry_points]
console_scripts =
    paramnb = paramnb.__main__:main

[wheel]
universal = 1

[tool:autover.configparser_workaround.archive_commit=$Format:%h$]
